changing main to index

--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
   <head>
     <meta charset="utf-8">
     <title>Title Goes Here</title>
-    <link href="../styles/content-template-styles.css" rel="stylesheet">
+    <link href="styles/content-template-styles.css" rel="stylesheet">
     <link id="cur-styles" href="" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="../images/28x28.png" type="image/jpg">
+    <link rel="shortcut icon" href="images/28x28.png" type="image/jpg">
     <meta name='viewport' content="width=device-width, initial-scale=1">
     <meta name="Description" content="PLACE YOUR DESCRIPTION CONTENT HERE">  
-    <script src="../scripts/content-template-script.js" defer></script>
+    <script src="scripts/content-template-script.js" defer></script>
     <script id="cur-script" src="" defer></script>
   </head>
   <body>
     <header>
         <div class="top menu">
-            <a href="" class="logo"><img src="../images/70x30.png" alt="logo" ><span class="title">Info</span></a>
+            <a href="" class="logo"><img src="images/70x30.png" alt="logo" ><span class="title">Info</span></a>
             <ul>              
                 <li><a href="">About</a></li>
-                <li><a href=""><img src="../images/28x28.png" alt="icon"></a></li>
+                <li><a href=""><img src="images/28x28.png" alt="icon"></a></li>
             </ul>
         </div>
     </header>
@@ -29,12 +29,12 @@
             <form class="search"><input type="search" placeholder="Search . . ."></form>
             <div class="navi">
                 <div id="tofc">
-                    <div class="mod"><a href="main.html">Module 1</a></div>
+                    <div class="mod"><a href="index.html">Module 1</a></div>
                     <ul>
                         <li ><a class="group-header">Header 1</a>
                             <ul>
-                                <li><a href="main.html?contenta">Content A</a></li>
-                                <li><a href="main.html?contentb">Content B</a></li>
+                                <li><a href="index.html?contenta">Content A</a></li>
+                                <li><a href="index.html?contentb">Content B</a></li>
                             </ul>
                         </li>
                         <li ><a class="group-header">Header 2</a>
@@ -65,10 +65,10 @@
                 <div id="results" hidden>
                     <div class="mod">Search Results</div>
                     <ul>
-                        <li><a class="group-header" href="main.html?contenta">Content A</a>
+                        <li><a class="group-header" href="index.html?contenta">Content A</a>
                             <p>Here is a bunch of content for Content A page, it contains this stuff and that stuff and a bunch of stuff</p>
                         </li>
-                        <li><a class="group-header" href="main.html?contentb">Content B</a>
+                        <li><a class="group-header" href="index.html?contentb">Content B</a>
                             <p>Here is a bunch of content for Content B page, it contains this stuff and that stuff and a bunch of stuff</p>
                         </li>
                         <li><a class="group-header" href="">Content C</a>
