--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="images/28x28.png" type="image/jpg">
-    <meta name='viewport' content="width=device-width, initial-scale=1">
+    <meta name='viewport' content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     <meta name="Description" content="PLACE YOUR DESCRIPTION CONTENT HERE">  
     <script src="scripts/content-template-script.js" defer></script>
     <script id="cur-script" src="" defer></script>
