fixing mobile resize bug

--- a/index.html
+++ b/index.html
@@ -1,130 +1,132 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Title Goes Here</title>
-    <link href="styles/content-template-styles.css" rel="stylesheet">
-    <link id="cur-styles" href="" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="images/28x28.png" type="image/jpg">
-    <meta name='viewport' content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-    <meta name="Description" content="PLACE YOUR DESCRIPTION CONTENT HERE">  
-    <script src="scripts/content-template-script.js" defer></script>
-    <script id="cur-script" src="" defer></script>
-  </head>
-  <body>
-    <header>
-        <div class="top menu">
-            <a href="" class="logo"><img src="images/70x30.png" alt="logo" ><span class="title">Info</span></a>
-            <ul>              
-                <li><a href="">About</a></li>
-                <li><a href=""><img src="images/28x28.png" alt="icon"></a></li>
-            </ul>
-        </div>
-    </header>
-    <aside>
-        <button class="navi-toggle">≡</button>
-        <nav class="menu">
-            <form class="search"><input type="search" placeholder="Search . . ."></form>
-            <div class="navi">
-                <div id="tofc">
-                    <div class="mod"><a href="index.html">Module 1</a></div>
-                    <ul>
-                        <li ><a class="group-header">Header 1</a>
-                            <ul>
-                                <li><a href="index.html?contenta">Content A</a></li>
-                                <li><a href="index.html?contentb">Content B</a></li>
-                            </ul>
-                        </li>
-                        <li ><a class="group-header">Header 2</a>
-                            <ul>
-                                <li><a href="">Content C</a></li>
-                                <li><a href="">Content D</a></li>
-                                <li><a href="">Content E</a></li>
-                                <li><a href="">Content F</a></li>
-                            </ul>
-                        </li>
-                        <li ><a class="group-header">Header 3</a>
-                            <ul>
-                                <li><a href="">Content G</a></li>
-                                <li><a href="">Content H</a></li>
-                                <li><a href="">Content I</a></li>
-                            </ul>
-                        </li>
-                        <li ><a class="group-header">Header 4</a>
-                            <ul>
-                                <li><a href="">Content J</a></li>
-                                <li><a href="">Content K</a></li>
-                                <li><a href="">Content L</a></li>
-                                <li><a href="">Content M</a></li>
-                            </ul>
-                        </li>
+    <head>
+        <meta charset="utf-8">
+        <title>Title Goes Here</title>
+        <link href="styles/content-template-styles.css" rel="stylesheet">
+        <link id="cur-styles" href="" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+        <link rel="shortcut icon" href="images/28x28.png" type="image/jpg">
+        <meta name='viewport' content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+        <meta name="Description" content="PLACE YOUR DESCRIPTION CONTENT HERE">  
+        <script src="scripts/content-template-script.js" defer></script>
+        <script id="cur-script" src="" defer></script>
+    </head>
+    <body>
+        <div class="wrapper">
+            <header>
+                <div class="top menu">
+                    <a href="" class="logo"><img src="images/70x30.png" alt="logo" ><span class="title">Info</span></a>
+                    <ul>              
+                        <li><a href="">About</a></li>
+                        <li><a href=""><img src="images/28x28.png" alt="icon"></a></li>
                     </ul>
                 </div>
-                <div id="results" hidden>
-                    <div class="mod">Search Results</div>
+            </header>
+            <aside>
+                <button class="navi-toggle">≡</button>
+                <nav class="menu">
+                    <form class="search"><input type="search" placeholder="Search . . ."></form>
+                    <div class="navi">
+                        <div id="tofc">
+                            <div class="mod"><a href="index.html">Module 1</a></div>
+                            <ul>
+                                <li ><a class="group-header">Header 1</a>
+                                    <ul>
+                                        <li><a href="index.html?contenta">Content A</a></li>
+                                        <li><a href="index.html?contentb">Content B</a></li>
+                                    </ul>
+                                </li>
+                                <li ><a class="group-header">Header 2</a>
+                                    <ul>
+                                        <li><a href="">Content C</a></li>
+                                        <li><a href="">Content D</a></li>
+                                        <li><a href="">Content E</a></li>
+                                        <li><a href="">Content F</a></li>
+                                    </ul>
+                                </li>
+                                <li ><a class="group-header">Header 3</a>
+                                    <ul>
+                                        <li><a href="">Content G</a></li>
+                                        <li><a href="">Content H</a></li>
+                                        <li><a href="">Content I</a></li>
+                                    </ul>
+                                </li>
+                                <li ><a class="group-header">Header 4</a>
+                                    <ul>
+                                        <li><a href="">Content J</a></li>
+                                        <li><a href="">Content K</a></li>
+                                        <li><a href="">Content L</a></li>
+                                        <li><a href="">Content M</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
+                        <div id="results" hidden>
+                            <div class="mod">Search Results</div>
+                            <ul>
+                                <li><a class="group-header" href="index.html?contenta">Content A</a>
+                                    <p>Here is a bunch of content for Content A page, it contains this stuff and that stuff and a bunch of stuff</p>
+                                </li>
+                                <li><a class="group-header" href="index.html?contentb">Content B</a>
+                                    <p>Here is a bunch of content for Content B page, it contains this stuff and that stuff and a bunch of stuff</p>
+                                </li>
+                                <li><a class="group-header" href="">Content C</a>
+                                    <p>Here is a bunch of content for Content C page, it contains this stuff and that stuff and a bunch of stuff</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+            </aside>
+            <main>
+                <article id="content">
+                    <h1>Module 1</h1>
+                    <p>Tech Stack:</p>
                     <ul>
-                        <li><a class="group-header" href="index.html?contenta">Content A</a>
-                            <p>Here is a bunch of content for Content A page, it contains this stuff and that stuff and a bunch of stuff</p>
-                        </li>
-                        <li><a class="group-header" href="index.html?contentb">Content B</a>
-                            <p>Here is a bunch of content for Content B page, it contains this stuff and that stuff and a bunch of stuff</p>
-                        </li>
-                        <li><a class="group-header" href="">Content C</a>
-                            <p>Here is a bunch of content for Content C page, it contains this stuff and that stuff and a bunch of stuff</p>
-                        </li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
                     </ul>
-                </div>
-            </div>
-        </nav>
-    </aside>
-    <main>
-        <article id="content">
-            <h1>Module 1</h1>
-            <p>Tech Stack:</p>
-            <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-            </ul>
 
-            <p>UI design project focusing on user experience and responsive design. Utilizes JavaScript to implement resposivness and basic interactivity. Specifically, JavaScript is used to load the main content onto the template page, imlpement navigation and implement design changes during window resizing and usage of the search bar.</p>
-            
-            <p>Must be on a modern browser for full functionality, following versions of browsers and up will have full functionality, other browsers may or may not be fully functioning:</p>
-            <ul>
-                <li>Desktop:
+                    <p>UI design project focusing on user experience and responsive design. Utilizes JavaScript to implement resposivness and basic interactivity. Specifically, JavaScript is used to load the main content onto the template page, imlpement navigation and implement design changes during window resizing and usage of the search bar.</p>
+                    
+                    <p>Must be on a modern browser for full functionality, following versions of browsers and up will have full functionality, other browsers may or may not be fully functioning:</p>
                     <ul>
-                        <li>Chrome 21</li>
-                        <li>Edge 79</li>
-                        <li>Safari 6.1</li>
+                        <li>Desktop:
+                            <ul>
+                                <li>Chrome 21</li>
+                                <li>Edge 79</li>
+                                <li>Safari 6.1</li>
+                            </ul>
+                        </li>
+                        <li>Mobile:
+                            <ul>
+                                <li>Chrome 91</li>
+                                <li>Safari 7</li>
+                                <li>Android 4.4</li>
+                            </ul>
+                        </li>
                     </ul>
-                </li>
-                <li>Mobile:
+                    <p>The current working components/links are:</p>
                     <ul>
-                        <li>Chrome 91</li>
-                        <li>Safari 7</li>
-                        <li>Android 4.4</li>
+                        <li>Prev/Next</li>
+                        <li>Module 1</li>
+                        <li>Content A</li>
+                        <li>Content B</li>
+                        <li>Search Bar*</li>
                     </ul>
-                </li>
-            </ul>
-            <p>The current working components/links are:</p>
-            <ul>
-                <li>Prev/Next</li>
-                <li>Module 1</li>
-                <li>Content A</li>
-                <li>Content B</li>
-                <li>Search Bar*</li>
-            </ul>
-            <p>*Note: There is no implementation for the Search Bar, simply display changes.</p>
-        </article>
-    </main>
-    <div class="prev-next">
-        <a href="">⇦ Prev</a>
-        <a href="">Next ⇨</a>
-    </div>
-    <footer>
-        <div>Copyright Info: XXXXXXX</div>
-    </footer>
-  </body>
+                    <p>*Note: There is no implementation for the Search Bar, simply display changes.</p>
+                </article>
+            </main>
+            <div class="prev-next">
+                <a href="">⇦ Prev</a>
+                <a href="">Next ⇨</a>
+            </div>
+            <footer>
+                <div>Copyright Info: XXXXXXX</div>
+            </footer>
+        </div>
+    </body>
 </html>
