--- a/index.html
+++ b/index.html
@@ -83,15 +83,22 @@
             <main>
                 <article id="content">
                     <h1>Module 1</h1>
+                    <p><a href="https://github.com/joieli/web-dev-informational">GitHub Repo</a></p>
                     <p>Tech Stack:</p>
                     <ul>
                         <li>HTML</li>
                         <li>CSS</li>
                         <li>JavaScript</li>
                     </ul>
-
                     <p>UI design project focusing on user experience and responsive design. Utilizes JavaScript to implement resposivness and basic interactivity. Specifically, JavaScript is used to load the main content onto the template page, imlpement navigation and implement design changes during window resizing and usage of the search bar.</p>
-                    
+                    <p>The current working components/links are:</p>
+                    <ul>
+                        <li>Prev/Next</li>
+                        <li>Module 1</li>
+                        <li>Content A</li>
+                        <li>Content B</li>
+                        <li>Search Bar*</li>
+                    </ul>
                     <p>Must be on a modern browser for full functionality, following versions of browsers and up will have full functionality, other browsers may or may not be fully functioning:</p>
                     <ul>
                         <li>Desktop:
@@ -108,14 +115,6 @@
                                 <li>Android 4.4</li>
                             </ul>
                         </li>
-                    </ul>
-                    <p>The current working components/links are:</p>
-                    <ul>
-                        <li>Prev/Next</li>
-                        <li>Module 1</li>
-                        <li>Content A</li>
-                        <li>Content B</li>
-                        <li>Search Bar*</li>
                     </ul>
                     <p>*Note: There is no implementation for the Search Bar, simply display changes.</p>
                 </article>
