updating website links

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <main>
                 <article id="content">
                     <h1>Module 1</h1>
-                    <p><a href="https://github.com/joieli/web-dev-informational">GitHub Repo</a></p>
+                    <p><a href="https://joieli.github.io/informational-web-design/">GitHub Repo</a></p>
                     <p>Tech Stack:</p>
                     <ul>
                         <li>HTML</li>
